Update _config.yml to enable sitemap
Signed-off-by: Hao.Liang <hao.c.code@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: hoastyle.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -62,6 +62,9 @@ pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
+plugins:
+- hexo-generator-sitemap
+- hexo-generator-baidu-sitemap
 ## Themes: https://hexo.io/themes/
 theme: next
 
@@ -80,3 +83,9 @@ since: 2016
 
 # duoshuo
 duoshuo_shortname: hoastyle
+
+# sitemap
+baidusitemap:
+	path: baidusitemap.xml
+sitemap:
+	path: sitemap.xml
