--- a/_config.yml
+++ b/_config.yml
@@ -62,9 +62,9 @@ pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
-plugins:
-- hexo-generator-sitemap
-- hexo-generator-baidu-sitemap
+#plugins:
+#- hexo-generator-sitemap
+#- hexo-generator-baidu-sitemap
 ## Themes: https://hexo.io/themes/
 theme: next
 
