Update hexo about asoc
Signed-off-by: Hao Liang <hao.c.code@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hao's blog
+title: ZERO 城
 subtitle: share
 description: 
 author: Hao(梁浩)
-language: default
+language: zh-Hans
 timezone: Asia/Shanghai
 
 # URL
